--- a/webshare-downloader-frontend/src/App.css
+++ b/webshare-downloader-frontend/src/App.css
@@ -33,6 +33,10 @@ h1 {
 .progress-bar-component {
   margin: 1rem 10rem;
   border: 0.1rem solid #5E5DF0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .progress-bar-component:hover { 
@@ -41,12 +45,19 @@ h1 {
 }
 
 .progress-bar-status {
-  margin: 1rem 3rem;
+  margin: 5rem 3rem 0.2rem 3rem;
 }
 
 textarea {
   width: 65%;
   height: 5rem;
+  background-color: #2d2d2d;
+  color: #FFFFFF;
+}
+
+input {
+  width: 65%;
+  height: 2rem;
   background-color: #2d2d2d;
   color: #FFFFFF;
 }
@@ -95,11 +106,13 @@ textarea {
   color: #FFFFFF;
   font-size: small;
   font-weight: 300;
+  margin: 1.5rem 5rem;
 }
 
 .alias-name {
   color: #FFFFFF;
   font-weight: 700;
+  margin: 2rem 5rem 0 5rem;
 }
 
 .queue-component {
@@ -116,23 +129,63 @@ textarea {
   justify-content: center;
 }
 
-.info-line {
+.info-column {
   display: flex;
   justify-content: center;
   margin: 0.5rem 0;
+  flex-direction: column;
 }
 
 .box-border {
-  border: 0.1rem solid #5E5DF0;
-  border-radius: 0.5rem;
+  border-bottom: 0.1rem solid #5E5DF0;
+  border-left: 0.1rem solid #5E5DF0;
+  border-right: 0.1rem solid #5E5DF0;
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+
   width: fit-content;
   height: fit-content;
-  position: absolute;
-  right: 10.5rem;
+}
+
+.completed {
+  border-bottom: 0.1rem solid #50C878;
+  border-left: 0.1rem solid #50C878;
+  border-right: 0.1rem solid #50C878;
 }
 
 .remaining-time {
   color: #FFFFFF;
   font-weight: 700;
   padding: 0 0.75rem;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #5E5DF0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .copyright-icon {
+    margin: 0 0.5rem;
+  }
+}
+
+.check-icon {
+  color: #50C878;
+  size: 12rem;
+  margin: 0.5rem 0 0 0rem;
+  position: absolute;
+  left: 10.5rem;
+}
+
+.queue-info {
+  color: #50C878;
+  margin: 0.5rem 5rem 2.5rem 5rem;
+  font-weight: 700;
 }
