--- a/webshare-downloader-frontend/src/App.css
+++ b/webshare-downloader-frontend/src/App.css
@@ -1,12 +1,17 @@
 .App {
   text-align: center;
   background-color: #121212;
+  min-height: 80rem;
 }
 
 html, body {
   background-color: #121212;
   margin: 0;
   height: 100%;
+}
+
+:root {
+  color-scheme: dark;
 }
 
 h1 {
@@ -19,6 +24,14 @@ h1 {
   background-clip: text;
   -webkit-background-clip: text;
   font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
 }
 
 .header-div {
@@ -39,28 +52,31 @@ h1 {
   flex-direction: column;
 }
 
+.pb-completed {
+  border: 0.1rem solid #50C878;
+}
+
 .progress-bar-component:hover { 
   cursor: pointer;
   background-color: #2d2d2d;
 }
 
 .progress-bar-status {
-  margin: 5rem 3rem 0.2rem 3rem;
+  margin: 1rem 1rem;
+  width: 80%;
 }
 
 textarea {
-  width: 65%;
-  height: 5rem;
+  width: 100%;
   background-color: #2d2d2d;
+  height: 6rem;
   color: #FFFFFF;
+  border: transparent;
+  min-height: 3rem;
 }
 
-input {
-  width: 65%;
-  height: 2rem;
-  background-color: #2d2d2d;
-  color: #FFFFFF;
-}
+
+
 
 /* CSS */
 .button-nice {
@@ -102,6 +118,17 @@ input {
   box-shadow: #6acb8b 0 10px 20px -10px;
 }
 
+
+.button-nice-cancel {
+  background: #ff4848;
+  box-shadow: #ff4848 0 10px 20px -10px;
+}
+
+.button-nice-cancel:hover {
+  background: #ff4848;
+  box-shadow: #ff4848 0 10px 20px -10px;
+}
+
 .file-name {
   color: #FFFFFF;
   font-size: small;
@@ -112,7 +139,8 @@ input {
 .alias-name {
   color: #FFFFFF;
   font-weight: 700;
-  margin: 2rem 5rem 0 5rem;
+  font-size: xx-large;
+  margin: 1rem 4rem 0 4rem;
 }
 
 .queue-component {
@@ -122,6 +150,18 @@ input {
 .queue-message {
   color: #50C878;
   font-weight: 700;
+}
+
+.confirmation-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0;
+}
+
+.confirmation-text {
+  margin: 0.2rem;
 }
 
 .loading-component {
@@ -134,6 +174,7 @@ input {
   justify-content: center;
   margin: 0.5rem 0;
   flex-direction: column;
+  width: 100%;
 }
 
 .box-border {
@@ -160,7 +201,6 @@ input {
 }
 
 .footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
@@ -186,6 +226,53 @@ input {
 
 .queue-info {
   color: #50C878;
-  margin: 0.5rem 5rem 2.5rem 5rem;
+  margin: 0.5rem 5rem 0.8rem 5rem;
   font-weight: 700;
+}
+
+.input-error {
+  border: 0.1rem solid red;
+}
+
+.button-line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+
+
+
+@keyframes gradient { 
+  0%{background-position:0 0}
+  100%{background-position:100% 0}
+}
+
+.webflow-style-input {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 35rem;
+  margin: 0 auto;
+  border-radius: 2px;
+  padding: 0.5rem 0.5rem 1rem 0.5rem;
+  background: #2d2d2d;
+  align-items: center;
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: 999;
+    height: 2px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    background-position: 0% 0%;
+    background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
+    background-size: 500% auto;
+    animation: gradient 3s linear infinite;
+  }
 }
